fix bug 548735, r=bwinton, sr=standard8, fix cleanup of duplicate accounts, needed for b1 CLOSED TREE